--- a/details-4.html
+++ b/details-4.html
@@ -14,33 +14,32 @@
     <title>Dat's Cake blog</title>
 </head>
 <body>
-    <header>
-        <div id="toggle">
-            <i class="fa fa-bars" aria-hidden="true"></i>
+    <header class="header">
+        <div class="toggle_btn">
+            <i class="fa fa-bars"></i>
         </div>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="">Products</a>
-                 <ul>
-                    <li><a href="./details-1.html">Classic Yellow Cake </a></li>
-                    <li><a href="./details-2.html">Coconut Bundt Cake </a></li>
-                    <li><a href="./details-3.html">Cream Cheese Pound Cake</a></li>
-                    <li><a href="./details-4.html">German Chocolate Cake </a></li>
-                 </ul>
-                 </li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="./order.html">Order</a></li> 
-            </ul>
-        </nav>
-    </header>
-    <main>
+        
+        <ul class="navbar">
+            <li class="navbar-item"><a href="./index.html">Home</a></li>
+            <li class="navbar-item product">
+                <a class="product-icon" href="#">Product  <i id="down" class="fas fa-sort-down"></i></a>
+                <ul class="product-list">
+                    <li class="product-item"><a class="product-links" href="./details-1.html">Classic Yellow Cake </a></li>
+                    <li class="product-item"><a class="product-links" href="./details-2.html">Coconut Bundt Cake </a></li>
+                    <li class="product-item"><a class="product-links" href="./details-3.html">Cream Cheese Pound Cake</a></li>
+                    <li class="product-item"><a class="product-links" href="./details-4.html">German Chocolate Cake </a></li>
+                </ul>
+            </li>
+            <li class="navbar-item"><a href="./about.html">About</a></li>
+            <li class="navbar-item"><a href="./contact.html">Contact</a></li>
+            <li class="navbar-item"><a href="./order.html">Order</a></li>
+        </ul>    </header>
+    <main class="main-content">
         <p>12/Feb</p>
         <h2>German Chocolate Cake</h2>
-        <img src="./images/German-Chocolate-Cake-1.webp" alt="German-Chocolate-Cake" width="750"> <br>
-        <img src="./images/German-Chocolate-Cake-2.webp" alt="German-Chocolate-Cake" width="750"> <br>
-        <img src="./images/German-Chocolate-Cake-3.webp" alt="German-Chocolate-Cake" width="750">
+        <div class="center"><img src="./images/German-Chocolate-Cake-1.webp" alt="German-Chocolate-Cake" ></div>
+        <div class="center"><img src="./images/German-Chocolate-Cake-2.webp" alt="German-Chocolate-Cake" ></div>
+        <div class="center"><img src="./images/German-Chocolate-Cake-3.webp" alt="German-Chocolate-Cake" ></div>
         <h3>A version of momofuku's german chocolate cake with espresso & step-by-step photos. Layers of chocolate cake, crack pie, pecan butter & espresso frosting</h3>
         <p>A whole year - I can hardly believe it. 365 days, 87 posts, 35 cafe and restaurant reviews, 
             <br>hundreds of hours spent trialing recipes, photographing posts, writing and editing. Crazy. And I have loved every minute.</p>
@@ -53,20 +52,20 @@
         <p>Accepting that I will do the best I can in the time available took my first year. Accepting that I wanted to visit cafes, and fit in exercise, and spend time reading,
             <br> with friends and have interests outside of medical school -and that would mean not getting those challenging 10 or 15 questions in exams that would take an extra 10 hours
             <br> a week of study to maybe get right. And life would be a million times more enjoyable for it.</p>
-            <img src="./images/German-Chocolate-Cake-4.webp" alt="German-Chocolate-Cake" width="750"> <br>
-            <img src="./images/German-Chocolate-Cake-5.webp" alt="German-Chocolate-Cake" width="750"> <br>
+            <div class="center"><img src="./images/German-Chocolate-Cake-4.webp" alt="German-Chocolate-Cake" ></div> 
+            <div class="center"><img src="./images/German-Chocolate-Cake-5.webp" alt="German-Chocolate-Cake" ></div> 
         <p>This little corner of the internet has been a big part of that in 2015. It has been an opportunity to put some energy into one of my other passions, 
             <br>to switch my mind from science and learning anatomy into something less structured and more creative - even if just for an hour or two. 
             <br>A record of thoughts, feelings, events and recipes that, scarily enough, I will be able to look back on in 20 (or even 80!) years time. 
             <br>What has surprised me is how much I have grown to love photography: at the start, it was a means of conveying the beauty of a cake, or a tart - a way of convincing 
             <br>readers and family members that it was a recipe worth attempting. It has now become a hobby in and of itself - now armed with various lenses and a tripod,
             <br> a family trip to Turkey (see here and here) was recorded and experimenting with different props and lighting is almost as much fun as the recipes themselves.</p>
-            <img src="./images/German-Chocolate-Cake-6.webp" alt="German-Chocolate-Cake" width="750"> <br>
-            <img src="./images/German-Chocolate-Cake-7.webp" alt="German-Chocolate-Cake" width="750"> <br>
-            <img src="./images/German-Chocolate-Cake-8.webp" alt="German-Chocolate-Cake" width="750"> <br>
-            <img src="./images/German-Chocolate-Cake-9.webp" alt="German-Chocolate-Cake" width="750"> <br>
-            <img src="./images/German-Chocolate-Cake-10.webp" alt="German-Chocolate-Cake" width="750"> <br>
-            <img src="./images/German-Chocolate-Cake-11.webp" alt="German-Chocolate-Cake" width="750"> <br>
+            <div class="center"><img src="./images/German-Chocolate-Cake-6.webp" alt="German-Chocolate-Cake" ></div> 
+            <div class="center"><img src="./images/German-Chocolate-Cake-7.webp" alt="German-Chocolate-Cake" ></div> 
+            <div class="center"><img src="./images/German-Chocolate-Cake-8.webp" alt="German-Chocolate-Cake" ></div> 
+            <div class="center"><img src="./images/German-Chocolate-Cake-9.webp" alt="German-Chocolate-Cake" ></div> 
+            <div class="center"><img src="./images/German-Chocolate-Cake-10.webp" alt="German-Chocolate-Cake" ></div> 
+            <div class="center"><img src="./images/German-Chocolate-Cake-11.webp" alt="German-Chocolate-Cake" ></div>
         <p>I have so much appreciation for everyone who visits this blog - those who comment and try recipes, or those just passing through,
             <br> are what make it seem like I am not just putting thoughts into some random black hole, a void on the internet. So a big thank you! And to celebrate,
             <br> here is one of my most decadent cakes yet. Adapted from the ever-inspiring, incredible momofuku milk bar, it is a version of their German Chocolate cake.
@@ -75,15 +74,15 @@
             <br> gooey caramelised mess of sugar mixed with threaded coconut into a thick filling layer. On top of this is a toasty, nutty homemade pecan & walnut butter with crumbled wafers giving texture,
             <br> and layers of thick, fluffy chocolate-espresso frosting. Heaven, I tell you. Even though it is a small cake (and you might look at the 15cm/6inch cake tin thinking it is way too small for your cake appetite),
             <br> the height and richness means you really only need a small slice, so it easily feeds 8 people, if not 10.</p>
-            <img src="./images/German-Chocolate-Cake-12.webp" alt="German-Chocolate-Cake" width="750"> <br>
-            <img src="./images/German-Chocolate-Cake-13.webp" alt="German-Chocolate-Cake" width="750"> <br>
-            <img src="./images/German-Chocolate-Cake-14.webp" alt="German-Chocolate-Cake" width="750"> <br>
-            <img src="./images/German-Chocolate-Cake-15.webp" alt="German-Chocolate-Cake" width="750"> <br>
-            <img src="./images/German-Chocolate-Cake-16.webp" alt="German-Chocolate-Cake" width="750"> <br>
-            <img src="./images/German-Chocolate-Cake-17.webp" alt="German-Chocolate-Cake" width="750"> <br>
+            <div class="center"><img src="./images/German-Chocolate-Cake-12.webp" alt="German-Chocolate-Cake" ></div>
+            <div class="center"><img src="./images/German-Chocolate-Cake-13.webp" alt="German-Chocolate-Cake" ></div>
+            <div class="center"><img src="./images/German-Chocolate-Cake-14.webp" alt="German-Chocolate-Cake" ></div>
+            <div class="center"><img src="./images/German-Chocolate-Cake-15.webp" alt="German-Chocolate-Cake" ></div>
+            <div class="center"><img src="./images/German-Chocolate-Cake-16.webp" alt="German-Chocolate-Cake" ></div>
+            <div class="center"><img src="./images/German-Chocolate-Cake-17.webp" alt="German-Chocolate-Cake" ></div>
     </main>
-    <footer>
-        <p>&copy; 2023 by Dat's Cake </p>
+    <footer class="footer">
+        <p class="footer-text">&copy; 2023 by Dat's Cake</p>
     </footer>
     <script src="./js/responsive.js"></script>
 </body>
