--- a/about.html
+++ b/about.html
@@ -15,31 +15,38 @@
     <title>Dat's Cake blog</title>
 </head>
 <body>
-    <header>
-        <div id="toggle">
-            <i class="fa fa-bars" aria-hidden="true"></i>
+    <header class="header">
+        <div class="wall">
+            <img class="wall-background" src="./images/—Pngtree—delicious cake big banner_1110087.jpg" alt="ảnh nền bánh kem">
+            <div class="wall-title">blog</div>
+            <div class="wall-name">Dat's Cake</div>
         </div>
-        <nav >
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="">Products</a>
-                    <ul>
-                     <li><a href="./details-1.html">Classic Yellow Cake </a></li>
-                     <li><a href="./details-2.html">Coconut Bundt Cake </a></li>
-                     <li><a href="./details-3.html">Cream Cheese Pound Cake</a></li>
-                     <li><a href="./details-4.html">German Chocolate Cake </a></li>
-                    </ul>
-                </li>
-                 <li><a href="./about.html">About</a></li>
-                 <li><a href="./contact.html">Contact</a></li>
-                 <li><a href="./order.html">Order</a></li> 
-            </ul>
-        </nav>
+       
+        <div class="toggle_btn">
+            <i class="fa fa-bars"></i>
+        </div>
+        
+        <ul class="navbar">
+            <li class="navbar-item"><a href="./index.html">Home</a></li>
+            <li class="navbar-item product">
+                <a class="product-icon" href="#">Product  <i id="down" class="fas fa-sort-down"></i></a>
+                <ul class="product-list">
+                    <li class="product-item"><a class="product-links" href="./details-1.html">Classic Yellow Cake </a></li>
+                    <li class="product-item"><a class="product-links" href="./details-2.html">Coconut Bundt Cake </a></li>
+                    <li class="product-item"><a class="product-links" href="./details-3.html">Cream Cheese Pound Cake</a></li>
+                    <li class="product-item"><a class="product-links" href="./details-4.html">German Chocolate Cake </a></li>
+                </ul>
+            </li>
+            <li class="navbar-item"><a href="./about.html">About</a></li>
+            <li class="navbar-item"><a href="./contact.html">Contact</a></li>
+            <li class="navbar-item"><a href="./order.html">Order</a></li>
+        </ul>
     </header>
-    <main>
-     <h1>About Dat's Cake </h1>
-     <img src="./images/hinh-nen-banh-kem-1-scaled.jpg" alt="banh kem " width="750">
-     <p>Hello and welcome!  I'm Dat and I believe anyone can learn to confidently make recipes worthy of celebration.</p>
+    <main class="main">
+     <h1 id="main-title">About Dat's Cake </h1>
+     <div class="center"><img src="./images/hinh-nen-banh-kem-1-scaled.jpg" alt="banh kem " ></div>
+     <div class="main-content">
+        <p>Hello and welcome!  I'm Dat and I believe anyone can learn to confidently make recipes worthy of celebration.</p>
      <p> "I made your pavlova recipe today and it was delicious! As usual, your recipe was easy to follow.
         <br> There's four of us here and there's only one third left.  It'll be gone soon.  Thanks for another great recipe!"</p>
     <p> We tried your weeknight bolognese recipe yesterday!  Ohmygosh, it was so good.  My husband is still talking about it this morning.</p>
@@ -48,9 +55,10 @@
         <br>  I have been baking more and more and I find that your recipes are always the best.</p>
     <p> Imagine your friends and colleagues gobbling up those special treats that you made for them.  Imagine that the dish you made for Thanksgiving or
         <br> those cookies for Christmas are all that anyone is talking about and EVERYONE has asked you for the recipe..</p>
+     </div>
     </main>
-    <footer>
-        <p>&copy; 2023 by Dat's Cake </p>
+    <footer class="footer">
+        <p class="footer-text">&copy; 2023 by Dat's Cake</p>
     </footer>
   <script src="./js/responsive.js"></script>
 </body>
